Added Link to database, Linked proper Entity Model and Added Forms

--- a/LinqDatabase/LinqDatabase/App.config
+++ b/LinqDatabase/LinqDatabase/App.config
@@ -17,4 +17,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="TruckSysModel" connectionString="data source=localhost;initial catalog=TruckApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TruckAppEntities" connectionString="metadata=res://*/TruckSysModel.csdl|res://*/TruckSysModel.ssdl|res://*/TruckSysModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TruckApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TruckAppEntities1" connectionString="metadata=res://*/TruckSysModel.csdl|res://*/TruckSysModel.ssdl|res://*/TruckSysModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TruckApp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
